[package]
name = "env_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15.8"
indicatif = "0.17.8"
parse-size = "1.0.0"
sysinfo = "0.31.2"
rand = "0.9.0-alpha.2"

[target.'cfg(target_os="windows")'.dependencies]
dinvoke_rs = "0.1.5"
winapi = {version = "0.3.9", features =["processthreadsapi","winnt","winbase","securitybaseapi"]}

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
